code25_all/scala/3181745.txt
scala> val gen = new java.util.Random
gen: java.util.Random = java.util.Random@1b27332

scala> gen nextInt 3 :: Nil
<console>:7: error: type mismatch;
 found   : List[Int]
 required: Int
       gen nextInt 3 :: Nil
                     ^

scala> (gen nextInt 3) :: Nil
res69: List[Int] = List(1)

scala> def pr(i:Int):Int = { println(i); i }
pr: (i: Int)Int

scala> pr(1) :: pr(2) :: pr(3) :: Nil
1
2
3
res71: List[Int] = List(1, 2, 3)

scala> 1 + 2 :: Nil
res72: List[Int] = List(3)

gen nextInt 3 :: Nil
1 + 2 :: Nil
